fixed small screen overflow

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,5 +1,6 @@
 main {
   width: 60%;
+  // max-height: 100vh;
   background-color: $White;
   border-radius: 1.5rem;
   padding: 2rem;
@@ -153,6 +154,10 @@ input {
 }
 
 @media (max-width: 1230px) {
+  .container {
+    height: 100%!important;
+    padding-bottom: 1rem;
+  }
   .title {
     margin-top: 2rem;
     margin-bottom: 4rem!important;
@@ -169,6 +174,7 @@ input {
 @media (max-width: 1000px) {
   .container {
     width: 100%!important;
+    height: 100%!important;
   }
   main {
     width: 80%;
